Bug 391262 - Crash and messagem in updates about ARGUMENTS MISSING
Summary: Crash and messagem in updates about ARGUMENTS MISSING
Status: RESOLVED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: discover (show other bugs)
Version: 5.12.2
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Aleix Pol
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-01 19:00 UTC by Fábio Trentino de Souza
Modified: 2018-04-09 16:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments
Message "MISSING ARGUMENTS" In updates (156.02 KB, image/jpeg)
2018-03-01 19:02 UTC, Fábio Trentino de Souza
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fábio Trentino de Souza 2018-03-01 19:00:33 UTC
Updates sayind " MISSING ARGUMENTS "  and complete crash the application.
Comment 1 Fábio Trentino de Souza 2018-03-01 19:02:12 UTC
Created attachment 111116 [details]
Message "MISSING ARGUMENTS" In updates
Comment 2 Aleix Pol 2018-03-01 19:05:13 UTC
Where's the crash? Do you have a backtrace?
Comment 3 Fábio Trentino de Souza 2018-03-01 19:50:00 UTC
(In reply to Aleix Pol from comment #2)
> Where's the crash? Do you have a backtrace?

In Discover Update... but, it's OK. I force task.
Comment 4 Nate Graham 2018-03-01 22:55:21 UTC
What distro are you using?
Comment 5 Christoph Feck 2018-03-29 14:52:43 UTC
If you can provide the information requested in comment #4, please add it.
Comment 6 Aleix Pol 2018-04-09 16:58:38 UTC
Git commit be9c3a3363d4d159c2a67ffa442afd07ca0332f1 by Aleix Pol.
Committed on 09/04/2018 at 15:41.
Pushed by apol into branch 'Plasma/5.12'.

Don't change the resources while updating

Even if one of the backend ends, we want to see its resources until it's
over.

M  +7    -2    libdiscover/UpdateModel/UpdateModel.cpp
M  +1    -0    libdiscover/UpdateModel/UpdateModel.h

https://commits.kde.org/discover/be9c3a3363d4d159c2a67ffa442afd07ca0332f1