Don't change the resources while updating

Even if one of the backend ends, we want to see its resources until it's
over.

BUG: 391262